--- a/排序.html
+++ b/排序.html
@@ -115,17 +115,58 @@ $(function(){
 			$ul.insertAfter($nextUl);
 		}
 	})
-var jsonstr="[]";
-var jsonarray = eval('('+jsonstr+')');
-
-
-var arr  =
-     {
-         "name" : 3,
-         "value" : 3
-     }
-console.log(jsonarray.push(arr));
-console.log(JSON.stringify(jsonarray))
+	$(document).click(function(){
+		var str1 = {"name": "apple", "sex": "21"};
+                 
+		// 参数：prop = 属性，val = 值
+		function createJson(prop, val) {
+		    // 如果 val 被忽略
+		    if(typeof val === "undefined") {
+		        // 删除属性
+		        delete str1[prop];
+		    }
+		    else {
+		        // 添加 或 修改
+		        str1[prop] = val;
+		    }
+		}
+		
+		// 无改动，输出 Object {name="apple", sex="21"}
+		console.log(str1);
+		                                          
+		// 添加属性 color，值为 red
+		createJson("color", "red");
+		console.log(str1); 
+		
+		var fields = $(".tab");
+		
+		var param = {};
+		for(var i=0;i<fields.length;i++){
+//			console.log(fields[i])
+//console.log(i);
+//			if(fields.eq(i).find(".sang").html() != undefined && fields.eq(i).find(".xia").html() != ''){
+////			  param['name'] = fields.eq(i).find(".xia").html();
+////			  console.log($(".tab").eq(i).find(".xia").html())
+////			  console.log(fields[i]);
+////			  i++;
+////			   param['name']=fields.eq(i).find(".sang").html();
+//			}
+			console.log($(".tab").eq(0).find(".xia").html())
+		 }
+		console.log(param)
+		
+	});
+//var jsonstr="[]";
+//var jsonarray = eval('('+jsonstr+')');
+//
+//
+//var arr  =
+//   {
+//       "name" : 3,
+//       "value" : 3
+//   }
+//console.log(jsonarray.push(arr));
+//console.log(JSON.stringify(jsonarray))
 </script>
 </body>
 </html>
